--- a/src/pages/films/1-c1-f1.html
+++ b/src/pages/films/1-c1-f1.html
@@ -15,7 +15,7 @@
             <a href="../home.html"><i class="fas fa-angle-left"></i> back</a>
             <video src="../../utils/videos/1-c1-f1.mp4" id="video" controls loop autoplay preload muted></video>
         </header>
-            <main class="det-main">
+            <div class="det-main">
                 <h1>Introducción de la antropología a la ética.</h1>
                 <div class="meta">
                     <span class="coincidence">99% para ti</span>
@@ -38,7 +38,35 @@
                     <button class="btn-download"> <i class="fas fa-clone"></i> Más títulos similares </button>
                     <button class="btn-download"> <i class="fas fa-audio-description"></i> Audio y subtítulos </button>
                 </div>
-            </main>
+            </div>
+            <div class="det-main2">
+                <h1>Introducción de la antropología a la ética.</h1>
+                <div class="meta">
+                    <span class="coincidence">99% para ti</span>
+                    <span class="year">2021</span>
+                    <span class="age">R</span>
+                    <span class="time">0h 2m</span>
+                    <span class="quality">HD</span>
+                </div>
+                <div class="actions">
+                    <button class="button-primary"> <i class="fas fa-play"></i>  Ver </button>
+                    <button class="btn-download"> <i class="fas fa-download"></i> Descargar </button>
+                </div>
+                <div class="text">
+                    <p style="color: white"> Este importante documental fue seleccionado para representar a la ética en la 93A edición de los premios Oscar, siendo de gran importancia a la hora de brindar conocimiento a distintas personas de la Universidad Católica de Colombia en su tema de introducción a la antropología de la ética.</p>
+                    <div class="cite">
+                        <p> Elenco: Diana Karolay Arango Sánchez... más </p>
+                        <p> Dirigido por: Dalia Jaqueline Santa Cruz </p>
+                    </div>                    
+                </div>
+            </div><br/>
+            <footer class="foot">
+                <div class="botonesCel2" >
+                    <button class="btn-black2"><i class="fas fa-plus" style="font-size: 40px; color: white"></i><br/>Mi lista</button>        
+                    <button class="btn-black2"><i class="fas fa-thumbs-up"style="font-size: 38px; color: white"></i><br/>Calificar</button>
+                    <button class="btn-black2"><i class="fas fa-share"style="font-size: 40px; color: white"></i><br/>Compartir</button>
+                </div>        
+            </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
         <script src="../../utils/js/pelis.js"></script>        
     </body>
