--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
+        <script src="../utils/js/home.js"></script>
         <script src="https://kit.fontawesome.com/ab487a9db9.js" crossorigin="anonymous"></script>
         <link rel="icon" type="image/png" sizes="32x32" href="../utils/images/logou.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
@@ -147,8 +149,16 @@
                 </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
-    <script src="../utils/js/home.js"></script>
+    </div> <br/>
+    <footer class="foot">
+        <div class="botonesCel2" >
+            <button class="btn-black2"><i class="fas fa-home" style="font-size: 48px; color: white"></i><br/>Inicio</button>        
+            <button class="btn-black2"><i class="fas fa-gamepad"style="font-size: 48px; color: white"></i><br/>Juegos</button>
+            <button class="btn-black2"><i class="fas fa-photo-video"style="font-size: 48px; color: white"></i><br/>Próximamente</button>
+            <button class="btn-black2"><i class="fas fa-arrow-circle-down"style="font-size: 48px; color: white"></i><br/>Descargas</button>
+        </div>
+
+    </footer>
+
 </body>
 </html>
