--- a/src/pages/series/8-c2-s2.html
+++ b/src/pages/series/8-c2-s2.html
@@ -39,6 +39,34 @@
                     <button class="btn-download"> <i class="fas fa-audio-description"></i> Audio y subtítulos </button>
                 </div>
             </main>
+            <div class="det-main2">
+                <h1>Las virtudes del líder.</h1>
+                <div class="meta">
+                    <span class="coincidence">99% para ti</span>
+                    <span class="year">2021</span>
+                    <span class="age">R</span>
+                    <span class="time">0h 2m</span>
+                    <span class="quality">HD</span>
+                </div>
+                <div class="actions">
+                    <button class="button-primary"> <i class="fas fa-play"></i>  Ver </button>
+                    <button class="btn-download"> <i class="fas fa-download"></i> Descargar </button>
+                </div>
+                <div class="text">
+                    <p style="color: white">Tras el gran éxito de la primera temporada, se estrenó la nueva temporada de las virtudes del lider basada en la película más taquillera de los Estados Unidos el "lobo de wall street" demostrando la humildad y magnitud que puede tener un buen lider.</p>
+                    <div class="cite">
+                        <p> Elenco: Diana Karolay Arango Sánchez... más </p>
+                        <p> Dirigido por: Dalia Jaqueline Santa Cruz </p>
+                    </div>                    
+                </div>
+            </div><br/>
+            <footer class="foot">
+                <div class="botonesCel2" >
+                    <button class="btn-black2"><i class="fas fa-plus" style="font-size: 40px; color: white"></i><br/>Mi lista</button>        
+                    <button class="btn-black2"><i class="fas fa-thumbs-up"style="font-size: 38px; color: white"></i><br/>Calificar</button>
+                    <button class="btn-black2"><i class="fas fa-share"style="font-size: 40px; color: white"></i><br/>Compartir</button>
+                </div>        
+            </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
         <script src="../../utils/js/pelis.js"></script>        
     </body>
