responsive design finished

--- a/src/pages/films/1-c1-f1.html
+++ b/src/pages/films/1-c1-f1.html
@@ -13,7 +13,8 @@
     <body>
         <header class="det-header">
             <a href="../home.html"><i class="fas fa-angle-left"></i> back</a>
-            <video src="../../utils/videos/1-c1-f1.mp4" id="video" controls loop autoplay preload muted></video>
+            <video src="../../utils/videos/1-c1-f1.mp4" id="video" class="video1" controls loop autoplay preload muted></video>
+            <video src="../../utils/videos/1-c1-f1.mp4" class="video2" controls></video>
         </header>
             <div class="det-main">
                 <h1>Introducción de la antropología a la ética.</h1>
