--- a/src/pages/films/4-c1-f2.html
+++ b/src/pages/films/4-c1-f2.html
@@ -13,8 +13,9 @@
     <body>
         <header class="det-header">
             <a href="../home.html"><i class="fas fa-angle-left"></i> back</a>
-            <video src="../../utils/videos/4-c1-f2.mp4" id="video" controls loop autoplay preload muted></video>
-        </header>
+            <video src="../../utils/videos/4-c1-f2.mp4" id="video" class="video1" controls loop autoplay preload muted></video>
+            <video src="../../utils/videos/4-c1-f2.mp4" class="video2" controls></video>       
+       </header>
             <main class="det-main">
                 <h1>Conciencia moral.</h1>
                 <div class="meta">
