--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -45,8 +45,8 @@
 
         <div class="container">
             <div class="firstPart">
-                <img src="../utils/images/home.png" id="normal">
-                <img src="../utils/images/homecel.png" id="cel">
+                <img src="../utils/images/home.jpg" id="normal">
+                <img src="../utils/images/homecel.jpg" id="cel">
             </div>
             <p class="categorias">Apasionante • Disparatado • Documental • TV</p><br/>
 
