--- a/src/pages/series/anacase/cap2.html
+++ b/src/pages/series/anacase/cap2.html
@@ -13,12 +13,14 @@
     <body>
         <header class="det-header">
             <a href="../../series/3-c1-s2.html"><i class="fas fa-angle-left"></i> back</a>
-            <video src="../../../utils/videos/dignidadhum.mp4" id="video" controls loop autoplay preload muted></video>
-        </header>
+            <video src="../../../utils/videos/dignidadhum.mp4" id="video" class="video1" controls loop autoplay preload muted></video>
+            <video src="../../../utils/videos/dignidadhum.mp4" class="video2" controls></video>    
+                </header>
             <main class="det-main" style="text-align:right">
                 <p style="color: white;"><strong>Análisis de casos</strong></p>
                 <p style="color: white;">«Dignidad humana»</p>
             </main>
+            
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
         <script src="../../../utils/js/pelis.js"></script>        
     </body>
