--- a/src/pages/series/2-c1-s1.html
+++ b/src/pages/series/2-c1-s1.html
@@ -13,7 +13,8 @@
     <body>
         <header class="det-header">
             <a href="../home.html"><i class="fas fa-angle-left"></i> back</a>
-            <video src="../../utils/videos/2-c1-s1.mp4" id="video" controls loop autoplay preload muted></video>
+            <video src="../../utils/videos/2-c1-s1.mp4" id="video" class="video1" controls loop autoplay preload muted></video>
+            <video src="../../utils/videos/2-c1-s1.mp4" class="video2" controls></video>  
         </header>
             <main class="det-main">
                 <h1>Dinamismo del obrar humano.</h1>
