--- a/src/pages/series/milagro/cap2.html
+++ b/src/pages/series/milagro/cap2.html
@@ -13,12 +13,14 @@
     <body>
         <header class="det-header">
             <a href="../../series/11-c3-s1.html"><i class="fas fa-angle-left"></i> back</a>
-            <video src="../../../utils/videos/abort.mp4" id="video" controls loop autoplay preload muted></video>
+            <video src="../../../utils/videos/desapre.mp4" id="video" class="video1" controls loop autoplay preload muted></video>
+            <video src="../../../utils/videos/desapre.mp4" class="video2" controls></video>    
         </header>
             <main class="det-main" style="text-align:right">
                 <p style="color: white;"><strong>El milagro de la vida</strong></p>
                 <p style="color: white;">«Aborto y traumas del aborto»</p>
             </main>
+        
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
         <script src="../../../utils/js/pelis.js"></script>        
     </body>
